--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speed Queen Appliance Repair New York - Authorized Service</title>
     <meta name="description" content="Serving all Speed Queen Appliances throughout Manhattan, Brooklyn, Queens, Bronx. Washing Machines, Dryers, Commercial & Residential Laundry Appliances">
-<meta name="keywords" content="washer and dryer repair Manhattan New York, Manhattan New York washer and dryer repair, gas washer and dryer repair Manhattan New York, electric washer and dryer repair Manhattan New York, stackable washer and dryer repair Manhattan New York, front-load washer and dryer repair Manhattan New York, top-load washer and dryer repair Manhattan New York, high-efficiency washer and dryer repair Manhattan New York, compact washer and dryer repair Manhattan New York, freestanding washer and dryer repair Manhattan New York, portable washer and dryer repair Manhattan New York, commercial washer and dryer repair Manhattan New York, residential washer and dryer repair Manhattan New York, same day washer and dryer repair Manhattan New York">    <meta name="author" content="Appliance Repair Services NYC">
+    <meta name="keywords" content="washer and dryer repair Manhattan New York, Manhattan New York washer and dryer repair, gas washer and dryer repair Manhattan New York, electric washer and dryer repair Manhattan New York, stackable washer and dryer repair Manhattan New York, front-load washer and dryer repair Manhattan New York, top-load washer and dryer repair Manhattan New York, high-efficiency washer and dryer repair Manhattan New York, compact washer and dryer repair Manhattan New York, freestanding washer and dryer repair Manhattan New York, portable washer and dryer repair Manhattan New York, commercial washer and dryer repair Manhattan New York, residential washer and dryer repair Manhattan New York, same day washer and dryer repair Manhattan New York">    <meta name="author" content="Appliance Repair Services NYC">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://speedqueenappliancerepairnyc.com/">
     <link rel="sitemap" href="https://speedqueenappliancerepairnyc.com/sitemap.xml">
 
-    <meta property="og:title" content="Thermador Appliance Repair New York - Authorized">
-    <meta property="og:description" content="Serving all Thermador Appliances throughout Manhattan, Brooklyn, Queens, Bronx. Call (718) 717-1706!">
+    <meta property="og:title" content="Speed Queen Appliance Repair New York - Authorized">
+    <meta property="og:description" content="Serving all Speed Queen Appliances throughout Manhattan, Brooklyn, Queens, Bronx. Call (718) 717-1706!">
     <meta property="og:image" content="https://speedqueenappliancerepairnyc.com/favicon.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="675">
